--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -41,7 +41,9 @@
                                  [style.margin.px]='imageMargin'
                                  *ngIf='showImage' />
                         </td>
-                        <td>{{product.productName}}</td>
+                        <a [routerLink]="['/products', product.productId]">
+                            <td>{{product.productName}}</td>
+                        </a>
                         <td>{{product.productCode | lowercase | convertToSpaces:'-'}}</td>
                         <td>{{product.releaseDate}}</td>
                         <td>{{product.price | currency:'USD':'symbol':'1.2-2'}}</td>
